--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,5 @@
 <% if (locals.errorMessage != null) { %>
-  <%= errorMessage %>
+  <div class="alert alert-danger" role="alert">
+    <%= errorMessage %>
+  </div>
 <% } %>
