--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -1,6 +1,9 @@
-<h2>New student</h2>
-<form action="/students" method="POST">
-  <%- include('_form_fields') %>
-  <a href="/students">Cancel</a>
-  <button type="submit">Create</button>
-</form>
+<div class="container-sm">
+  <h2>New student</h2>
+  <form action="/students" method="POST">
+    <%- include('_form_fields') %>
+    <br>
+    <a href="/students">Cancel</a>
+    <button type="submit">Create</button>
+  </form>
+</div>
